--- a/font-awesome.css
+++ b/font-awesome.css
@@ -190,7 +190,7 @@
   content: "\f002";
 }
 .fa-envelope-o:before {
-  content: "https://images-ext-2.discordapp.net/external/jNQMQiIfG-LuojH-SDQkA3Xs6T8ZWyzIb-phBvmWkZQ/https/raw.githubusercontent.com/mlncholyy/LL-G3/main/arr_logo.png";
+  content: "\f003";
 }
 .fa-heart:before {
   content: "\f004";
@@ -799,7 +799,7 @@
   content: "\f0de";
 }
 .fa-envelope:before {
-  content: "https://images-ext-2.discordapp.net/external/jNQMQiIfG-LuojH-SDQkA3Xs6T8ZWyzIb-phBvmWkZQ/https/raw.githubusercontent.com/mlncholyy/LL-G3/main/arr_logo.png";
+  content: "\f0e0";
 }
 .fa-linkedin:before {
   content: "\f0e1";
@@ -1342,7 +1342,7 @@
   content: "\f198";
 }
 .fa-envelope-square:before {
-  content: "https://images-ext-2.discordapp.net/external/jNQMQiIfG-LuojH-SDQkA3Xs6T8ZWyzIb-phBvmWkZQ/https/raw.githubusercontent.com/mlncholyy/LL-G3/main/arr_logo.png";
+  content: "\f199";
 }
 .fa-wordpress:before {
   content: "\f19a";
